ch(api documentation) [Finishes #166276332]
