# server/routes/admin.js
@@ -3,17 +3,11 @@ import { updateUserController, usersController, adminSignUpController } from '..
 import { adminSignUpValidate, updateUserValidation } from '../middleware/adminValidation';
 import { tokenVerifier } from '../middleware/authorize';
 import { adminCheck } from '../middleware/checkers';
-import {
-  viewAccountHistoryValidate
-} from '../middleware/userAuthValidation';
-import {
-  viewAccountHistory
-} from '../controller/userController';
 
 const adminRouter = express.Router();
 
 adminRouter.post('/auth/createUser', adminSignUpValidate, tokenVerifier, adminCheck, adminSignUpController);
 adminRouter.post('/setuser/:userid', updateUserValidation, tokenVerifier, adminCheck, updateUserController);
 adminRouter.get('/users', tokenVerifier, adminCheck, usersController);
-adminRouter.get('/accounts/:accountNumber/:transactions', tokenVerifier, adminCheck, viewAccountHistoryValidate, viewAccountHistory);
+// adminRouter.get('/accounts/:accountNumber/:transactions', tokenVerifier,adminCheck, viewAccountHistoryValidate, viewAccountHistory);
 export default adminRouter;
